add server configuration; add value injection

--- a/01-spring-boot-overview/01-spring-boot-demo/src/main/resources/application.yml
+++ b/01-spring-boot-overview/01-spring-boot-demo/src/main/resources/application.yml
@@ -15,3 +15,11 @@ info:
     name: My cool app
     description: A crazy fun app
     version: 1.0.0
+
+coach.name: "John Johnson"
+team.name: "Johnsons"
+
+server:
+  port: 7070
+  servlet:
+    context-path: /springbootcourse-01
