Add configuration to start application with data

--- a/03-spring-boot-hibernate-jpa-crud/01-cruddemo-student/src/main/resources/application.yml
+++ b/03-spring-boot-hibernate-jpa-crud/01-cruddemo-student/src/main/resources/application.yml
@@ -5,7 +5,16 @@ spring:
     password: springstudent
   main:
     banner-mode: off
+  jpa:
+    hibernate:
+      ddl-auto: update
 
 logging:
   level:
     root: warn
+    org:
+      hibernate:
+        sql: debug
+        orm:
+          jdbc:
+            bind: trace
