Changed base path for endpoints and default page size

--- a/04-spring-boot-rest-crud/04-spring-boot-rest-crud-employee-with-spring-data-rest/src/main/resources/application.yml
+++ b/04-spring-boot-rest-crud/04-spring-boot-rest-crud-employee-with-spring-data-rest/src/main/resources/application.yml
@@ -3,3 +3,8 @@ spring:
     url: "jdbc:mysql://localhost:3306/employee_directory"
     username: springstudent
     password: springstudent
+
+  data:
+    rest:
+      base-path: /rest-api
+      default-page-size: 20
