Add swagger and configure custom path

--- a/04-spring-boot-rest-crud/05-spring-boot-rest-crud-employee-with-openapi-swagger/src/main/resources/application.yml
+++ b/04-spring-boot-rest-crud/05-spring-boot-rest-crud-employee-with-openapi-swagger/src/main/resources/application.yml
@@ -3,3 +3,9 @@ spring:
     url: "jdbc:mysql://localhost:3306/employee_directory"
     username: springstudent
     password: springstudent
+
+springdoc:
+  swagger-ui:
+    path: /my-ui.html
+  api-docs:
+    path: /my-api-docs
