--- a/05-spring-boot-rest-security/00-spring-boot-rest-security-employee-starter-code/src/main/resources/application.properties
+++ b/05-spring-boot-rest-security/00-spring-boot-rest-security-employee-starter-code/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.password=springstudent
 spring.security.user.name=John
 spring.security.user.password=Smith123
 
+logging.level.org.springframework.security=debug
+
