--- a/06-spring-boot-spring-mvc/thymeleafdemo/thymeleafdemo/src/main/resources/application.properties
+++ b/06-spring-boot-spring-mvc/thymeleafdemo/thymeleafdemo/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 countries=Brazil,France,Spain,Poland,Italy,Japan
 languages=Go,Java,Python,C++,Bash,Rust,Ruby On Rails
+systems=Linux,macOS,Windows,Android,IOS
